--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Crystal Collector</title>
+        <title>Crystal Collector Game</title>
         
-        <link rel="icon" type="image/png" href="assets/images/favicon.png">
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Architects+Daughter|The+Girl+Next+Door">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -16,7 +15,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Simple crystal game</h1>
+            <h1>Crystal Collector</h1>
 
             <!-- Page 0: Directions -->
             <div class="page">
@@ -36,8 +35,8 @@
                     <p>Losses: <strong><span id="numLosses"></span></strong></p>
                 </div>
 
-                <p>Make a sum of <span id="targetSum"></span>!</p>
-                <p>Your sum is <strong><span id="currentSum"></span></strong>.</p>
+                <p>Random number <span id="targetSum"></span>!</p>
+                <p>Your total score is <strong><span id="TotalSum"></span></strong>.</p>
                 
                 <div class="clearfix">
                     <img class="crystals" src="assets/images/blue.png" alt="blue crystal">
